fix (scss) corrected pb on build for rdv docto, some gap (on formation) and header

--- a/src/Style/BullePEC.scss
+++ b/src/Style/BullePEC.scss
@@ -10,6 +10,7 @@
   @media (max-width: 1000px) {
     flex-direction: column;
     width: 90%;
+    gap: 0;
   }
   .bulle-pec {
     display: flex;
