--- a/src/Style/Contacts.scss
+++ b/src/Style/Contacts.scss
@@ -73,6 +73,10 @@
   @media (max-width: 600px) {
     .rdvdocto {
       width: 90%;
+      justify-content: center;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
       a {
         width: 20px;
         height: 20px;
