--- a/src/Style/Homepage.scss
+++ b/src/Style/Homepage.scss
@@ -287,8 +287,9 @@
     padding-right: 0;
     margin: 0 auto 10px auto;
     width: 90%;
-    gap: 30px;
+    gap: 10px;
     .tarifs {
+      padding: 0;
       width: 100%;
       flex-direction: row;
     }
